--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,16 @@
     text-align: center;
     background-color: antiquewhite;
     height: auto;
+    padding: 50px;
 }
+
+.jumbotron h1 {
+    font-size: 72px;
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+      color: #eee;
+      background: #121212;
+    }
+  }
