updated contact us page to no longer make address required and added an other option in for category

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -98,6 +98,10 @@ body {
     padding-bottom: 10px;
 }
 
+#indexFirstParagraph {
+    padding-top: 20px;
+}
+
 .phonenumber {
     text-decoration: none;
 }
