updated subcategory area to switch depending on which main category was clicked on

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -153,6 +153,10 @@ body {
     margin-top: 10px;
 }
 
+.none-button {
+    display: none;
+}
+
 .card-body {
     background-color: #EEEEEE;
     border: #EEEEEE;
