added a media query for jumbotrons so they will break-word if the viewport width is 380px or less, this is for smaller screened devices

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,6 +6,12 @@
     color: white;
 }
 
+@media screen and (max-width: 380px) {
+    .jumbotron {
+        word-wrap: break-word;
+    }
+}
+
 .jumbotron #jtronSmallerFont {
     font-size: 70px;
 }
