--- a/publicOLD/css/styles.css
+++ b/publicOLD/css/styles.css
@@ -1,27 +1,27 @@
 .jumbotron {
-    text-align: center;
-    background-color: #2F343F;
-    height: auto;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    padding-left: 15px;
-    padding-right: 15px;
-    color: white;
+  text-align: center;
+  background-color: #2f343f;
+  height: auto;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  padding-left: 15px;
+  padding-right: 15px;
+  color: white;
 }
 
 @media screen and (max-width: 380px) {
-    .jumbotron {
-        word-wrap: break-word;
-    }
+  .jumbotron {
+    word-wrap: break-word;
+  }
 }
 
 .jumbotron #jtronSmallerFont {
-    font-size: 70px;
+  font-size: 70px;
 }
 
 body {
-    background-color: #EEEEEE;
-    /*
+  background-color: #eeeeee;
+  /*
     This fixes the footer issue on larger screens/monitors but then makes the Filter by Category section look weird (the buttons stack instead of being next to each other)
     min-height: 100vh;
     display: flex;
@@ -30,198 +30,198 @@ body {
 }
 
 #footer-links {
-    text-decoration: none;
-    margin: 5px;
-    color: white;
+  text-decoration: none;
+  margin: 5px;
+  color: white;
 }
 
 #UnderConstruction {
-    color: red;
+  color: red;
 }
 
 .jumbotron h1 {
-    font-size: 78px;
+  font-size: 78px;
 }
 
 .centeredText {
-    text-align: center;
-    padding-top: 10px;
+  text-align: center;
+  padding-top: 10px;
 }
 
 .block-text {
-    margin: auto;
-    width: 80%;
+  margin: auto;
+  width: 80%;
 }
 
 .tagline-div h1 {
-    font-size: 48px;
+  font-size: 48px;
 }
 
 .tagline-div {
-    padding-top: 25px;
-    padding-bottom: 10px;
+  padding-top: 25px;
+  padding-bottom: 10px;
 }
 
 .indexDiv2 {
-    padding-top: 15px;
-    padding-bottom: 30px;
+  padding-top: 15px;
+  padding-bottom: 30px;
 }
 
 .getstartednow {
-    padding-bottom: 10px;
+  padding-bottom: 10px;
 }
 
 .indexDiv3 {
-    height: auto;
-    padding: 10px;
+  height: auto;
+  padding: 10px;
 }
 
 .indexDiv4 {
-    height: auto;
-    padding: 10px;
+  height: auto;
+  padding: 10px;
 }
 
 .indexDiv5 {
-    height: auto;
-    padding: 10px;
-    padding-bottom: 50px;
+  height: auto;
+  padding: 10px;
+  padding-bottom: 50px;
 }
 
 .vector_image {
-    max-width: 40%;
-    padding-bottom: 10px;
+  max-width: 40%;
+  padding-bottom: 10px;
 }
 
 .info_text {
-    float: inherit;
-    font-size: 20px;
+  float: inherit;
+  font-size: 20px;
 }
 
 .discoverDiv {
-    padding-bottom: 50px;
+  padding-bottom: 50px;
 }
 
 .page-footer {
-    background-color: #2F343F;
-    color: white;
-    margin-top: auto;
+  background-color: #2f343f;
+  color: white;
+  margin-top: auto;
 }
 
 .item {
-    text-align: center;
-    padding-bottom: 15px;
-    padding-top: 15px;
+  text-align: center;
+  padding-bottom: 15px;
+  padding-top: 15px;
 }
 
 .business_image {
-    width: 175px;
-    height: 175px;
-    padding-bottom: 10px;
+  width: 175px;
+  height: 175px;
+  padding-bottom: 10px;
 }
 
 #indexFirstParagraph {
-    padding-top: 20px;
+  padding-top: 20px;
 }
 
 .phonenumber {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .businessLinkPic {
-    display: inline-block;
-    vertical-align: top;
+  display: inline-block;
+  vertical-align: top;
 }
 
 .businessLinkText {
-    display: inline-block;
+  display: inline-block;
 }
 
 .businessLinks {
-    text-decoration: none;
-    color: #2F343F;
+  text-decoration: none;
+  color: #2f343f;
 }
 
 .backToDiscoverLink {
-    text-decoration: none;
-    color: #2F343F;
+  text-decoration: none;
+  color: #2f343f;
 }
 
 .businessHeaderLink {
-    text-decoration: underline;
-    color: #2F343F;
+  text-decoration: underline;
+  color: #2f343f;
 }
 
 .linkLogos {
-    width: 25px;
-    height: 25px;
+  width: 25px;
+  height: 25px;
 }
 
 .linkLogosPage {
-    width: 30px;
-    height: 30px;
+  width: 30px;
+  height: 30px;
 }
 
 .submit-button-area {
-    display: flex;
+  display: flex;
 }
 
 .filter-category-area {
-    height: auto;
-    margin-bottom: 20px;
+  height: auto;
+  margin-bottom: 20px;
 }
 
 .filter-subcategory-area {
-    height: auto;
-    margin-bottom: 20px;
+  height: auto;
+  margin-bottom: 20px;
 }
 
 #filterResults {
-    text-align: left;
+  text-align: left;
 }
 
 .button-section {
-    padding: 10px;
+  padding: 10px;
 }
 
 .category-button {
-    margin-right: 10px;
-    margin-top: 10px;
+  margin-right: 10px;
+  margin-top: 10px;
 }
 
 .none-button {
-    display: none;
+  display: none;
 }
 
 .card-body {
-    background-color: #EEEEEE;
-    border: #EEEEEE;
+  background-color: #eeeeee;
+  border: #eeeeee;
 }
 
 #wertigo-link {
-    color: white;
+  color: white;
 }
 
 .accordion-button {
-    background-color: #EEEEEE;
+  background-color: #eeeeee;
 }
 
 .accordion-body {
-    background-color: #EEEEEE;
+  background-color: #eeeeee;
 }
 
 .accordion-button:not(.collapsed) {
-    color: #2F343F;
-    background-color: #EEEEEE;
+  color: #2f343f;
+  background-color: #eeeeee;
 }
 
 #informationText {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 #informationTextLinks {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 #successButton {
-    margin: 10px;
+  margin: 10px;
 }
