--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,12 @@
   text-align: center;
   background-color: #eeeeee;
 }
+
+.centeredText {
+  text-align: center;
+  padding-top: 10px;
+}
+
+.phonenumber {
+  text-decoration: none;
+}
