added 4 new businesses

--- a/react-ui/src/pages/BusinessPage/BusinessPage.css
+++ b/react-ui/src/pages/BusinessPage/BusinessPage.css
@@ -28,3 +28,16 @@
   text-decoration: none;
   color: #2f343f;
 }
+
+.tableCenter {
+  font-size: 18px;
+}
+
+#days {
+  text-align: left;
+  padding-right: 10px;
+}
+
+#hours {
+  text-align: right;
+}
