--- a/react-ui/src/pages/BusinessOfTheWeekPage/BusinessOfTheWeekPage.css
+++ b/react-ui/src/pages/BusinessOfTheWeekPage/BusinessOfTheWeekPage.css
@@ -8,7 +8,8 @@
 }
 
 .promotionImage {
-  width: 200px;
-  height: 200px;
+  object-fit: cover;
+  width: 250px;
+  height: 250px;
   margin: 10px;
 }
